--- a/results.tex
+++ b/results.tex
@@ -1,19 +1,20 @@
 \subsection{Experimental Testbed}
 In this section, we employ RambutanAcc to study the impact of various code optimizations at different hardware levels of a GPU cluster.
 Since an application generally benefits from only a subset of these optimizations, we need more than one application.
-To this end, we take four benchmarks commonly used in science and engineering: sparse cholesky factorization, a machine learning based face recognition code, 2.5D Cannon's Matrix Multiplication, and 3D Stencil.
+To this end, we take four benchmarks commonly used in science and engineering: sparse Cholesky factorization, a machine learning based face recognition code, 2.5D Cannon's Matrix Multiplication, and 3D Stencil.
 When studying optimizations on a single GPU, to have apples-to-apples comparisons we always use our own CUDA kernels instead of 3rd party implementations (e.g. cuSPARSE). 
-In particular, for Sparse Cholesky Factorization, we develop our own CUDA kernels for $C = \alpha* A * B + \beta C$ where either A, B, and C are all in the {\em sparse} form or A is dense and B and C are sparse.
+In particular, for sparse Cholesky Factorization, we develop our own CUDA kernels for the sparse matrix multiply update $C = \alpha (A \cdot B) + \beta C$ where $B$ and $C$ are sparse and $A$ is either sparse or dense.
 In these kernels, we perform many optimization techniques such as memory coalescing and spatial tiling.
-We also employ a warp based thread reduction implementation that minimizes memory accesses. 
+We also employ a warp-based thread reduction implementation that minimizes memory accesses.
 For studies at higher hardware levels, we use vendor provided kernels as much as possible.
-For example, in  2.5D Cannon we use the cuBLAS's {\em dgemm} and {\em daxpy} implementations included in the NVIDIA toolkit to perform local matrix multiplication.
+For example, in  2.5D Cannon we use the cuBLAS's {\tt dgemm} and {\tt daxpy} implementations included in the NVIDIA toolkit to perform local matrix multiplication.
 
-For node level optimizations (on single and multiple GPUs of the same compute node), we use up to three K80 GPUs.
+For node-level optimizations (on single and multiple GPUs of the same compute node), we use up to three K80 GPUs.
 A K80 GPU pairs two GPU devices each having 2496 CUDA cores organized into 13 SMs.
 The whole K80-based system is equipped with 24GB DRAM with up to 480 GB/s memory bandwidth.
-For cluster level optimizations, we run our code on the K20x GPUs on Titan. Each K20x is about a half of K80 in terms of core count and memory bandwidth.
-We use the nvcc compiler version 7.0 and sm\_35 capability for CUDA codes and the Intel compiler for codes running on the host.
+For cluster-level optimizations, we run our code on the K20x GPUs on Titan.
+Each K20x is about a half of a K80 in terms of core count and memory bandwidth.
+We use the {\tt nvcc} compiler version 7.0 and sm\_35 capability for CUDA codes and the Intel compiler for codes running on the host.
 We also run a few experiments on NVIDIA P100 GPUs (the newest generation named Pascal).
 Each Pascal GPU consists of 3584 cores and supports 720 GB/s memory bandwidth.
 Nvcc 8.0 and sm\_60 are used for these experiments.
@@ -21,7 +22,7 @@ We use GASNet for communication among the GPUs.
 
 
 \subsection{Scheduling tasks on SMs of a GPU}
-We first study the significance of optimizations at the GPU level using sparse cholesky factorization and the Viola-Jones face detection algorithm.
+We first study the significance of optimizations at the GPU level using sparse Cholesky factorization and the Viola-Jones face detection algorithm.
 For these studies we use a GPU of the Kepler K80 card.
 
 \subsubsection{Sparse Cholesky Factorization}
@@ -39,19 +40,19 @@ The compute-intensive {\em update} kernel is executed on the GPU workers.
 {\em RambutanAcc} automatically streams data required by this kernel to the GPU's DRAM and streams the results back.
 
 %An interesting path to explore is the tradeoff between coarse and fine-grained scheduling policies.  
-%For sparse cholesky, the matrix is represented by many small CSC tiles.\samW{the previous sentence repeats the one}
+%For sparse Cholesky, the matrix is represented by many small CSC tiles.\samW{the previous sentence repeats the one}
 %Thus, even a small problem size can result in many tasks.
-We implement two code variants, which are just slightly different from each other.
+We implement two code variants, which differ from each other in the method of task execution used (refer to Section~\ref{sec:task-def} for {\em task type} descriptions).
 The first code variant implements the {\em Update} phase with {\em type-3} task to launch the sparse matrix multiply kernel on the whole GPU, and hence the name {\em CUDA Launch}.
-The other code variant is called {\em persistent kernel}, since it employs {\em type-2} task, which can be scheduled on a group of SMs by the persistent kernel. 
-Fig.~\ref{fig:coarseFine} shows results of sparse cholesky under two scheduling policies.
+The other code variant is called {\em persistent kernel}, since it employs {\em type-2} task, which can be scheduled on a group of SMs by the persistent kernel.
+Fig.~\ref{fig:coarseFine} shows results of sparse Cholesky under two scheduling policies.
 It can be seen that {\em persistent kernel} outperforms the coarse-grained {\em CUDA Launch} policy.
 This can be explained as follows.
 Each CSC tile is very small (e.g. 32$\times$32), making it hard to map computations efficiently to many CUDA cores.
 Thus, it may not be possible to scale a task to all available SMs of a GPU.
 We observe that for many input matrices tasks run more efficiently after reducing the number of SMs per worker by a factor of 2$\times$ or 4$\times$.
 Since there are many tasks that can be runnable at a time, the scheduler can keep all SMs busy at very small overhead.
-Fig~\ref{fig:nWorkers} shows the optimal number of workers on a K80 GPU for Sparse Cholesky Factorization when the degree of sparsity of the input matrix varies.
+Fig~\ref{fig:nWorkers} shows the optimal number of workers on a K80 GPU for sparse Cholesky Factorization when the degree of sparsity of the input matrix varies.
 If the sparse matrix is filled with many tasks we have more parallelism, allowing us to configure the GPUs with more workers.
 Note that we picked these three numbers to represent wide ranges of sparsity, and the actual number in practice may fall somewhere in these ranges. 
 
@@ -68,15 +69,14 @@ Note that we picked these three numbers to represent wide ranges of sparsity, an
 \caption{If there is enough parallelism (matrix is filled with more non-zeros), increasing \#workers may increase performance}
 \label{fig:nWorkers}
 \end{subfigure}
-\caption{Left: the persistent kernel with two workers/GPU improves the performance. For this experiment, the degrees of sparsity are low (under 30\%). Right: for matrices with higher degrees of sparsity, increasing the number of workers  may further improve the performance}
+\caption{Left: the persistent kernel with two workers/GPU improves the performance of the sparse Cholesky factorization. For this experiment, the degrees of sparsity are low (under 30\%). Right: for matrices with higher degrees of sparsity, increasing the number of workers  may further improve the performance}
 %\samW{note left vs. right;  for left, what is the sparsity???  where does the matrix come from???}}
 \label{fig:coarseFine}
 \end{figure}
 
-The lesson learn from this study is that fine-grained scheduling can be very helpful if we have a DAG with many small tasks, which can not run well on the whole GPU-based system.
-The persistent kernel allows this capability at small programming cost.
-The programmer can obtain high compute throughput on GPUs without complicating the application algorithm.
-This is an important observation since sparse representation is very common in practice.
+The lesson learned from this study is that fine-grained scheduling can be very helpful if we have a DAG with many small tasks, which cannot effectively utilize the whole GPU.
+The persistent kernel also allows running multiple task types simultaneously, taking advantage of additional task parallelism compared to sequentially launching uniform accelerator kernels, all at a small programming cost.
+Using these methods, the programmer can obtain high compute throughput on GPUs without complicating the application algorithm, which is an important capability since sparse representations are very common in practice.
 
 \subsubsection{Viola-Jones Face Recognition}
 %\samW{is there a citation for this code/algorithm}
